--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "express-locallibrary-tutorial",
   "version": "0.0.0",
+  "engines": {
+    "node": "18.2.0"
+  },
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
@@ -12,6 +15,7 @@
     "compression": "^1.7.4",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.0.2",
     "ejs": "^3.1.8",
     "express": "~4.16.1",
     "express-validator": "^6.14.2",
