--- a/package.json
+++ b/package.json
@@ -1,32 +1,25 @@
 {
-  "name": "express-locallibrary-tutorial",
-  "version": "0.0.0",
-  "engines": {
-    "node": "18.2.0"
-  },
-  "private": true,
+  "name": "webdev-express-tutorial",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
   "scripts": {
-    "start": "node ./bin/www",
-    "devstart": "nodemon ./bin/www",
-    "serverstart": "DEBUG=express-locallibrary-tutorial:* npm run devstart"
+    "devStart": "nodemon server.js"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "async": "^3.2.4",
-    "compression": "^1.7.4",
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "dotenv": "^16.0.2",
+    "body-parser": "^1.20.1",
     "ejs": "^3.1.8",
-    "express": "~4.16.1",
-    "express-validator": "^6.14.2",
-    "helmet": "^6.0.0",
-    "http-errors": "~1.6.3",
-    "luxon": "^3.0.3",
-    "mongoose": "^6.6.1",
-    "morgan": "~1.9.1",
-    "pug": "^3.0.2"
+    "express": "^4.18.1",
+    "express-ejs-layouts": "^2.5.1",
+    "filepond": "^4.30.4",
+    "method-override": "^3.0.0",
+    "mongoose": "^6.6.5"
   },
   "devDependencies": {
+    "dotenv": "^16.0.3",
     "nodemon": "^2.0.20"
   }
 }
