--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-ejs-layouts": "^2.5.1",
+    "express-flash": "^0.0.2",
     "express-session": "^1.17.3",
     "filepond": "^4.30.4",
     "flash": "^1.1.0",
     "method-override": "^3.0.0",
+    "mongodb": "^4.10.0",
     "mongoose": "^6.6.5",
-    "passport": "^0.6.0",
+    "morgan": "^1.10.0",
+    "passport": "^0.5.3",
     "passport-local": "^1.0.0",
     "validator": "^13.7.0"
   },
